// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main-request Entity with key including reserved/escaped uri characters 1`] = `
Object {
  "results": Array [
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE%20DE-SFSNRF')",
      },
      "name": "WE DE-SFSNRF",
      "value": null,
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE!DE-SFSNRF')",
      },
      "name": "WE!DE-SFSNRF",
      "value": "!",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE%22DE-SFSNRF')",
      },
      "name": "WE\\"DE-SFSNRF",
      "value": "\\"",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE%23DE-SFSNRF')",
      },
      "name": "WE#DE-SFSNRF",
      "value": "#",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE%24DE-SFSNRF')",
      },
      "name": "WE$DE-SFSNRF",
      "value": "$",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE%25DE-SFSNRF')",
      },
      "name": "WE%DE-SFSNRF",
      "value": "%",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE%26DE-SFSNRF')",
      },
      "name": "WE&DE-SFSNRF",
      "value": "&",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE''DE-SFSNRF')",
      },
      "name": "WE'DE-SFSNRF",
      "value": "'",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE(DE-SFSNRF')",
      },
      "name": "WE(DE-SFSNRF",
      "value": "(",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE)DE-SFSNRF')",
      },
      "name": "WE)DE-SFSNRF",
      "value": ")",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE*DE-SFSNRF')",
      },
      "name": "WE*DE-SFSNRF",
      "value": "*",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE%2BDE-SFSNRF')",
      },
      "name": "WE+DE-SFSNRF",
      "value": "+",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE%2CDE-SFSNRF')",
      },
      "name": "WE,DE-SFSNRF",
      "value": ",",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE-DE-SFSNRF')",
      },
      "name": "WE-DE-SFSNRF",
      "value": "-",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE.DE-SFSNRF')",
      },
      "name": "WE.DE-SFSNRF",
      "value": ".",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE%2FDE-SFSNRF')",
      },
      "name": "WE/DE-SFSNRF",
      "value": "/",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE:DE-SFSNRF')",
      },
      "name": "WE:DE-SFSNRF",
      "value": ":",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE%3BDE-SFSNRF')",
      },
      "name": "WE;DE-SFSNRF",
      "value": ";",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE%3CDE-SFSNRF')",
      },
      "name": "WE<DE-SFSNRF",
      "value": "<",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE%3DDE-SFSNRF')",
      },
      "name": "WE=DE-SFSNRF",
      "value": "=",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE%3EDE-SFSNRF')",
      },
      "name": "WE>DE-SFSNRF",
      "value": ">",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE%3FDE-SFSNRF')",
      },
      "name": "WE?DE-SFSNRF",
      "value": "?",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE%40DE-SFSNRF')",
      },
      "name": "WE@DE-SFSNRF",
      "value": "@",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE%5C%5CDE-SFSNRF')",
      },
      "name": "WE\\\\\\\\DE-SFSNRF",
      "value": "\\\\\\\\",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE%5EDE-SFSNRF')",
      },
      "name": "WE^DE-SFSNRF",
      "value": "^",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE_DE-SFSNRF')",
      },
      "name": "WE_DE-SFSNRF",
      "value": "_",
    },
    Object {
      "__metadata": Object {
        "type": "test.MainService.Favorite",
        "uri": "/v2/main/Favorite('WE%C2%A7DE-SFSNRF')",
      },
      "name": "WE§DE-SFSNRF",
      "value": "§",
    },
  ],
}
`;

exports[`main-request Entity with string uuid key 1`] = `
Object {
  "results": Array [
    Object {
      "ID": "63567c66-ee42-400a-8c35-014d6622e5fe",
      "__metadata": Object {
        "type": "test.MainService.StringUUID",
        "uri": "/v2/main/StringUUID('63567c66-ee42-400a-8c35-014d6622e5fe')",
      },
      "name": "Test 1",
    },
    Object {
      "ID": "de32e86c-2f4f-46af-88ff-9f2b6c94c811",
      "__metadata": Object {
        "type": "test.MainService.StringUUID",
        "uri": "/v2/main/StringUUID('de32e86c-2f4f-46af-88ff-9f2b6c94c811')",
      },
      "name": "Test 1",
    },
  ],
}
`;

exports[`main-request GET $metadata 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<edmx:Edmx Version=\\"1.0\\" xmlns:edmx=\\"http://schemas.microsoft.com/ado/2007/06/edmx\\" xmlns:m=\\"http://schemas.microsoft.com/ado/2007/08/dataservices/metadata\\" xmlns:sap=\\"http://www.sap.com/Protocols/SAPData\\">
  <edmx:Reference Uri=\\"https://sap.github.io/odata-vocabularies/vocabularies/Common.xml\\" xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\">
    <edmx:Include Alias=\\"Common\\" Namespace=\\"com.sap.vocabularies.Common.v1\\"/>
  </edmx:Reference>
  <edmx:Reference Uri=\\"https://oasis-tcs.github.io/odata-vocabularies/vocabularies/Org.OData.Core.V1.xml\\" xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\">
    <edmx:Include Alias=\\"Core\\" Namespace=\\"Org.OData.Core.V1\\"/>
  </edmx:Reference>
  <edmx:Reference Uri=\\"https://sap.github.io/odata-vocabularies/vocabularies/UI.xml\\" xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\">
    <edmx:Include Alias=\\"UI\\" Namespace=\\"com.sap.vocabularies.UI.v1\\"/>
  </edmx:Reference>
  <edmx:DataServices m:DataServiceVersion=\\"2.0\\">
    <Schema Namespace=\\"test.MainService\\" xmlns=\\"http://schemas.microsoft.com/ado/2008/09/edm\\">
      <EntityContainer Name=\\"EntityContainer\\" m:IsDefaultEntityContainer=\\"true\\">
        <EntitySet Name=\\"Favorite\\" EntityType=\\"test.MainService.Favorite\\"/>
        <EntitySet Name=\\"Header\\" EntityType=\\"test.MainService.Header\\"/>
        <FunctionImport Name=\\"Header_boundAction\\" ReturnType=\\"test.MainService.Result\\" m:HttpMethod=\\"POST\\" sap:action-for=\\"test.MainService.Header\\">
          <Parameter Name=\\"ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\" Mode=\\"In\\"/>
          <Parameter Name=\\"num\\" Type=\\"Edm.Int32\\" Mode=\\"In\\" Nullable=\\"true\\"/>
          <Parameter Name=\\"text\\" Type=\\"Edm.String\\" Mode=\\"In\\" Nullable=\\"true\\"/>
        </FunctionImport>
        <FunctionImport Name=\\"Header_boundFunction\\" ReturnType=\\"Collection(test.MainService.Result)\\" m:HttpMethod=\\"GET\\" sap:action-for=\\"test.MainService.Header\\">
          <Parameter Name=\\"ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\" Mode=\\"In\\"/>
          <Parameter Name=\\"num\\" Type=\\"Edm.Int32\\" Mode=\\"In\\" Nullable=\\"true\\"/>
          <Parameter Name=\\"text\\" Type=\\"Edm.String\\" Mode=\\"In\\" Nullable=\\"true\\"/>
        </FunctionImport>
        <EntitySet Name=\\"HeaderAssocKey\\" EntityType=\\"test.MainService.HeaderAssocKey\\"/>
        <EntitySet Name=\\"HeaderItem\\" EntityType=\\"test.MainService.HeaderItem\\"/>
        <EntitySet Name=\\"HeaderStream\\" EntityType=\\"test.MainService.HeaderStream\\"/>
        <EntitySet Name=\\"HeaderTemporal\\" EntityType=\\"test.MainService.HeaderTemporal\\"/>
        <EntitySet Name=\\"HeaderUrlStream\\" EntityType=\\"test.MainService.HeaderUrlStream\\"/>
        <EntitySet Name=\\"StringUUID\\" EntityType=\\"test.MainService.StringUUID\\"/>
        <FunctionImport Name=\\"unboundAction\\" ReturnType=\\"Collection(test.MainService.Result)\\" m:HttpMethod=\\"POST\\">
          <Parameter Name=\\"num\\" Type=\\"Edm.Int32\\" Mode=\\"In\\" Nullable=\\"true\\"/>
          <Parameter Name=\\"text\\" Type=\\"Edm.String\\" Mode=\\"In\\" Nullable=\\"true\\"/>
        </FunctionImport>
        <FunctionImport Name=\\"unboundDecimalFunction\\" ReturnType=\\"Edm.Decimal\\" m:HttpMethod=\\"GET\\"/>
        <FunctionImport Name=\\"unboundDecimalsFunction\\" ReturnType=\\"Collection(Edm.Decimal)\\" m:HttpMethod=\\"GET\\"/>
        <FunctionImport Name=\\"unboundErrorFunction\\" ReturnType=\\"test.MainService.Result\\" m:HttpMethod=\\"GET\\"/>
        <FunctionImport Name=\\"unboundFunction\\" ReturnType=\\"test.MainService.Result\\" m:HttpMethod=\\"GET\\">
          <Parameter Name=\\"num\\" Type=\\"Edm.Int32\\" Mode=\\"In\\" Nullable=\\"true\\"/>
          <Parameter Name=\\"text\\" Type=\\"Edm.String\\" Mode=\\"In\\" Nullable=\\"true\\"/>
        </FunctionImport>
        <FunctionImport Name=\\"unboundNavigationFunction\\" EntitySet=\\"Header\\" ReturnType=\\"test.MainService.Header\\" m:HttpMethod=\\"GET\\">
          <Parameter Name=\\"num\\" Type=\\"Edm.Int32\\" Mode=\\"In\\" Nullable=\\"true\\"/>
          <Parameter Name=\\"text\\" Type=\\"Edm.String\\" Mode=\\"In\\" Nullable=\\"true\\"/>
        </FunctionImport>
        <FunctionImport Name=\\"unboundNavigationsFunction\\" EntitySet=\\"Header\\" ReturnType=\\"Collection(test.MainService.Header)\\" m:HttpMethod=\\"GET\\">
          <Parameter Name=\\"num\\" Type=\\"Edm.Int32\\" Mode=\\"In\\" Nullable=\\"true\\"/>
          <Parameter Name=\\"text\\" Type=\\"Edm.String\\" Mode=\\"In\\" Nullable=\\"true\\"/>
        </FunctionImport>
        <FunctionImport Name=\\"unboundWarningFunction\\" ReturnType=\\"test.MainService.Result\\" m:HttpMethod=\\"GET\\"/>
        <AssociationSet Name=\\"Header_FirstItem\\" Association=\\"test.MainService.Header_FirstItem\\">
          <End Role=\\"Header\\" EntitySet=\\"Header\\"/>
          <End Role=\\"HeaderItem\\" EntitySet=\\"HeaderItem\\"/>
        </AssociationSet>
        <AssociationSet Name=\\"HeaderAssocKey_header\\" Association=\\"test.MainService.HeaderAssocKey_header\\">
          <End Role=\\"HeaderAssocKey\\" EntitySet=\\"HeaderAssocKey\\"/>
          <End Role=\\"Header\\" EntitySet=\\"Header\\"/>
        </AssociationSet>
        <AssociationSet Name=\\"HeaderItem_header\\" Association=\\"test.MainService.HeaderItem_header\\">
          <End Role=\\"HeaderItem\\" EntitySet=\\"HeaderItem\\"/>
          <End Role=\\"Header\\" EntitySet=\\"Header\\"/>
        </AssociationSet>
        <AssociationSet Name=\\"HeaderItem_NextItem\\" Association=\\"test.MainService.HeaderItem_NextItem\\">
          <End Role=\\"HeaderItem\\" EntitySet=\\"HeaderItem\\"/>
          <End Role=\\"HeaderItem1\\" EntitySet=\\"HeaderItem\\"/>
        </AssociationSet>
        <AssociationSet Name=\\"HeaderItem_assoc\\" Association=\\"test.MainService.HeaderItem_assoc\\">
          <End Role=\\"HeaderItem\\" EntitySet=\\"HeaderItem\\"/>
          <End Role=\\"HeaderAssocKey\\" EntitySet=\\"HeaderAssocKey\\"/>
        </AssociationSet>
      </EntityContainer>
      <EntityType Name=\\"Favorite\\">
        <Key>
          <PropertyRef Name=\\"name\\"/>
        </Key>
        <Property Name=\\"name\\" Type=\\"Edm.String\\" Nullable=\\"false\\"/>
        <Property Name=\\"value\\" Type=\\"Edm.String\\"/>
      </EntityType>
      <EntityType Name=\\"Header\\">
        <Key>
          <PropertyRef Name=\\"ID\\"/>
        </Key>
        <Property Name=\\"ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\"/>
        <Property Name=\\"createdAt\\" Type=\\"Edm.DateTimeOffset\\" Precision=\\"7\\"/>
        <Property Name=\\"createdBy\\" Type=\\"Edm.String\\" MaxLength=\\"255\\"/>
        <Property Name=\\"modifiedAt\\" Type=\\"Edm.DateTimeOffset\\" Precision=\\"7\\"/>
        <Property Name=\\"modifiedBy\\" Type=\\"Edm.String\\" MaxLength=\\"255\\"/>
        <Property Name=\\"name\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"description\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"country\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"currency\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"stock\\" Type=\\"Edm.Int32\\"/>
        <Property Name=\\"price\\" Type=\\"Edm.Decimal\\" Scale=\\"2\\" Precision=\\"12\\"/>
        <NavigationProperty Name=\\"Items\\" Relationship=\\"test.MainService.HeaderItem_header\\" FromRole=\\"Header\\" ToRole=\\"HeaderItem\\"/>
        <NavigationProperty Name=\\"FirstItem\\" Relationship=\\"test.MainService.Header_FirstItem\\" FromRole=\\"Header\\" ToRole=\\"HeaderItem\\"/>
        <Property Name=\\"FirstItem_ID\\" Type=\\"Edm.Guid\\"/>
      </EntityType>
      <EntityType Name=\\"HeaderAssocKey\\">
        <Key>
          <PropertyRef Name=\\"header_ID\\"/>
        </Key>
        <NavigationProperty Name=\\"header\\" Relationship=\\"test.MainService.HeaderAssocKey_header\\" FromRole=\\"HeaderAssocKey\\" ToRole=\\"Header\\"/>
        <Property Name=\\"num\\" Type=\\"Edm.Double\\"/>
        <Property Name=\\"header_ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\"/>
      </EntityType>
      <EntityType Name=\\"HeaderItem\\">
        <Key>
          <PropertyRef Name=\\"ID\\"/>
        </Key>
        <Property Name=\\"ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\"/>
        <Property Name=\\"name\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"description\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"startAt\\" Type=\\"Edm.DateTimeOffset\\" Precision=\\"7\\"/>
        <Property Name=\\"endAt\\" Type=\\"Edm.DateTimeOffset\\" Precision=\\"7\\"/>
        <NavigationProperty Name=\\"header\\" Relationship=\\"test.MainService.HeaderItem_header\\" FromRole=\\"HeaderItem\\" ToRole=\\"Header\\"/>
        <NavigationProperty Name=\\"NextItem\\" Relationship=\\"test.MainService.HeaderItem_NextItem\\" FromRole=\\"HeaderItem\\" ToRole=\\"HeaderItem1\\"/>
        <NavigationProperty Name=\\"assoc\\" Relationship=\\"test.MainService.HeaderItem_assoc\\" FromRole=\\"HeaderItem\\" ToRole=\\"HeaderAssocKey\\"/>
        <Property Name=\\"header_ID\\" Type=\\"Edm.Guid\\"/>
        <Property Name=\\"NextItem_ID\\" Type=\\"Edm.Guid\\"/>
        <Property Name=\\"assoc_header_ID\\" Type=\\"Edm.Guid\\"/>
      </EntityType>
      <EntityType Name=\\"HeaderStream\\" m:HasStream=\\"true\\">
        <Key>
          <PropertyRef Name=\\"ID\\"/>
        </Key>
        <Property Name=\\"ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\"/>
        <Property Name=\\"mediaType\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"filename\\" Type=\\"Edm.String\\"/>
      </EntityType>
      <EntityType Name=\\"HeaderTemporal\\">
        <Key>
          <PropertyRef Name=\\"ID\\"/>
          <PropertyRef Name=\\"validFrom\\"/>
        </Key>
        <Property Name=\\"ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\"/>
        <Property Name=\\"validFrom\\" Type=\\"Edm.DateTimeOffset\\" Precision=\\"7\\" Nullable=\\"false\\"/>
        <Property Name=\\"validTo\\" Type=\\"Edm.DateTimeOffset\\" Precision=\\"7\\"/>
        <Property Name=\\"name\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"value\\" Type=\\"Edm.String\\"/>
      </EntityType>
      <EntityType Name=\\"HeaderUrlStream\\" m:HasStream=\\"true\\">
        <Key>
          <PropertyRef Name=\\"ID\\"/>
        </Key>
        <Property Name=\\"ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\"/>
        <Property Name=\\"mediaType\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"filename\\" Type=\\"Edm.String\\"/>
      </EntityType>
      <EntityType Name=\\"StringUUID\\">
        <Key>
          <PropertyRef Name=\\"ID\\"/>
        </Key>
        <Property Name=\\"ID\\" Type=\\"Edm.String\\" Nullable=\\"false\\"/>
        <Property Name=\\"name\\" Type=\\"Edm.String\\"/>
      </EntityType>
      <ComplexType Name=\\"Result\\">
        <Property Name=\\"name\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"code\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"age\\" Type=\\"Edm.Int32\\"/>
      </ComplexType>
      <Association Name=\\"Header_FirstItem\\">
        <End Role=\\"Header\\" Type=\\"test.MainService.Header\\" Multiplicity=\\"*\\"/>
        <End Role=\\"HeaderItem\\" Type=\\"test.MainService.HeaderItem\\" Multiplicity=\\"0..1\\"/>
        <ReferentialConstraint>
          <Principal Role=\\"HeaderItem\\">
            <PropertyRef Name=\\"ID\\"/>
          </Principal>
          <Dependent Role=\\"Header\\">
            <PropertyRef Name=\\"FirstItem_ID\\"/>
          </Dependent>
        </ReferentialConstraint>
      </Association>
      <Association Name=\\"HeaderAssocKey_header\\">
        <End Role=\\"HeaderAssocKey\\" Type=\\"test.MainService.HeaderAssocKey\\" Multiplicity=\\"*\\"/>
        <End Role=\\"Header\\" Type=\\"test.MainService.Header\\" Multiplicity=\\"0..1\\"/>
        <ReferentialConstraint>
          <Principal Role=\\"Header\\">
            <PropertyRef Name=\\"ID\\"/>
          </Principal>
          <Dependent Role=\\"HeaderAssocKey\\">
            <PropertyRef Name=\\"header_ID\\"/>
          </Dependent>
        </ReferentialConstraint>
      </Association>
      <Association Name=\\"HeaderItem_header\\">
        <End Role=\\"HeaderItem\\" Type=\\"test.MainService.HeaderItem\\" Multiplicity=\\"*\\">
          <OnDelete Action=\\"Cascade\\"/>
        </End>
        <End Role=\\"Header\\" Type=\\"test.MainService.Header\\" Multiplicity=\\"0..1\\"/>
        <ReferentialConstraint>
          <Principal Role=\\"Header\\">
            <PropertyRef Name=\\"ID\\"/>
          </Principal>
          <Dependent Role=\\"HeaderItem\\">
            <PropertyRef Name=\\"header_ID\\"/>
          </Dependent>
        </ReferentialConstraint>
      </Association>
      <Association Name=\\"HeaderItem_NextItem\\">
        <End Role=\\"HeaderItem\\" Type=\\"test.MainService.HeaderItem\\" Multiplicity=\\"*\\"/>
        <End Role=\\"HeaderItem1\\" Type=\\"test.MainService.HeaderItem\\" Multiplicity=\\"0..1\\"/>
        <ReferentialConstraint>
          <Principal Role=\\"HeaderItem1\\">
            <PropertyRef Name=\\"ID\\"/>
          </Principal>
          <Dependent Role=\\"HeaderItem\\">
            <PropertyRef Name=\\"NextItem_ID\\"/>
          </Dependent>
        </ReferentialConstraint>
      </Association>
      <Association Name=\\"HeaderItem_assoc\\">
        <End Role=\\"HeaderItem\\" Type=\\"test.MainService.HeaderItem\\" Multiplicity=\\"*\\"/>
        <End Role=\\"HeaderAssocKey\\" Type=\\"test.MainService.HeaderAssocKey\\" Multiplicity=\\"0..1\\"/>
        <ReferentialConstraint>
          <Principal Role=\\"HeaderAssocKey\\">
            <PropertyRef Name=\\"header_ID\\"/>
          </Principal>
          <Dependent Role=\\"HeaderItem\\">
            <PropertyRef Name=\\"assoc_header_ID\\"/>
          </Dependent>
        </ReferentialConstraint>
      </Association>
      <Annotations Target=\\"test.MainService.Header/createdAt\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Created On\\"/>
        <Annotation Term=\\"Core.Computed\\" Bool=\\"true\\"/>
        <Annotation Term=\\"Core.Immutable\\" Bool=\\"true\\"/>
        <Annotation Term=\\"UI.HiddenFilter\\" Bool=\\"true\\"/>
      </Annotations>
      <Annotations Target=\\"test.MainService.Header/createdBy\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Created By\\"/>
        <Annotation Term=\\"Core.Computed\\" Bool=\\"true\\"/>
        <Annotation Term=\\"Core.Description\\" String=\\"User's unique ID\\"/>
        <Annotation Term=\\"Core.Immutable\\" Bool=\\"true\\"/>
        <Annotation Term=\\"UI.HiddenFilter\\" Bool=\\"true\\"/>
      </Annotations>
      <Annotations Target=\\"test.MainService.Header/modifiedAt\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Changed On\\"/>
        <Annotation Term=\\"Core.Computed\\" Bool=\\"true\\"/>
        <Annotation Term=\\"UI.HiddenFilter\\" Bool=\\"true\\"/>
      </Annotations>
      <Annotations Target=\\"test.MainService.Header/modifiedBy\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Changed By\\"/>
        <Annotation Term=\\"Core.Computed\\" Bool=\\"true\\"/>
        <Annotation Term=\\"Core.Description\\" String=\\"User's unique ID\\"/>
        <Annotation Term=\\"UI.HiddenFilter\\" Bool=\\"true\\"/>
      </Annotations>
      <Annotations Target=\\"test.MainService.HeaderStream/mediaType\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Core.IsMediaType\\" Bool=\\"true\\"/>
      </Annotations>
      <Annotations Target=\\"test.MainService.HeaderUrlStream/mediaType\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Core.IsMediaType\\" Bool=\\"true\\"/>
      </Annotations>
      <Annotations Target=\\"test.MainService.HeaderUrlStream/filename\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.ContentDisposition\\">
          <Record>
            <PropertyValue Property=\\"Filename\\" Bool=\\"true\\"/>
          </Record>
        </Annotation>
      </Annotations>
    </Schema>
  </edmx:DataServices>
</edmx:Edmx>"
`;

exports[`main-request GET $metadata localized 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<edmx:Edmx Version=\\"1.0\\" xmlns:edmx=\\"http://schemas.microsoft.com/ado/2007/06/edmx\\" xmlns:m=\\"http://schemas.microsoft.com/ado/2007/08/dataservices/metadata\\" xmlns:sap=\\"http://www.sap.com/Protocols/SAPData\\">
  <edmx:Reference Uri=\\"https://sap.github.io/odata-vocabularies/vocabularies/Common.xml\\" xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\">
    <edmx:Include Alias=\\"Common\\" Namespace=\\"com.sap.vocabularies.Common.v1\\"/>
  </edmx:Reference>
  <edmx:Reference Uri=\\"https://oasis-tcs.github.io/odata-vocabularies/vocabularies/Org.OData.Core.V1.xml\\" xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\">
    <edmx:Include Alias=\\"Core\\" Namespace=\\"Org.OData.Core.V1\\"/>
  </edmx:Reference>
  <edmx:Reference Uri=\\"https://sap.github.io/odata-vocabularies/vocabularies/UI.xml\\" xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\">
    <edmx:Include Alias=\\"UI\\" Namespace=\\"com.sap.vocabularies.UI.v1\\"/>
  </edmx:Reference>
  <edmx:DataServices m:DataServiceVersion=\\"2.0\\">
    <Schema Namespace=\\"test.MainService\\" xmlns=\\"http://schemas.microsoft.com/ado/2008/09/edm\\">
      <EntityContainer Name=\\"EntityContainer\\" m:IsDefaultEntityContainer=\\"true\\">
        <EntitySet Name=\\"Favorite\\" EntityType=\\"test.MainService.Favorite\\"/>
        <EntitySet Name=\\"Header\\" EntityType=\\"test.MainService.Header\\"/>
        <FunctionImport Name=\\"Header_boundAction\\" ReturnType=\\"test.MainService.Result\\" m:HttpMethod=\\"POST\\" sap:action-for=\\"test.MainService.Header\\">
          <Parameter Name=\\"ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\" Mode=\\"In\\"/>
          <Parameter Name=\\"num\\" Type=\\"Edm.Int32\\" Mode=\\"In\\" Nullable=\\"true\\"/>
          <Parameter Name=\\"text\\" Type=\\"Edm.String\\" Mode=\\"In\\" Nullable=\\"true\\"/>
        </FunctionImport>
        <FunctionImport Name=\\"Header_boundFunction\\" ReturnType=\\"Collection(test.MainService.Result)\\" m:HttpMethod=\\"GET\\" sap:action-for=\\"test.MainService.Header\\">
          <Parameter Name=\\"ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\" Mode=\\"In\\"/>
          <Parameter Name=\\"num\\" Type=\\"Edm.Int32\\" Mode=\\"In\\" Nullable=\\"true\\"/>
          <Parameter Name=\\"text\\" Type=\\"Edm.String\\" Mode=\\"In\\" Nullable=\\"true\\"/>
        </FunctionImport>
        <EntitySet Name=\\"HeaderAssocKey\\" EntityType=\\"test.MainService.HeaderAssocKey\\"/>
        <EntitySet Name=\\"HeaderItem\\" EntityType=\\"test.MainService.HeaderItem\\"/>
        <EntitySet Name=\\"HeaderStream\\" EntityType=\\"test.MainService.HeaderStream\\"/>
        <EntitySet Name=\\"HeaderTemporal\\" EntityType=\\"test.MainService.HeaderTemporal\\"/>
        <EntitySet Name=\\"HeaderUrlStream\\" EntityType=\\"test.MainService.HeaderUrlStream\\"/>
        <EntitySet Name=\\"StringUUID\\" EntityType=\\"test.MainService.StringUUID\\"/>
        <FunctionImport Name=\\"unboundAction\\" ReturnType=\\"Collection(test.MainService.Result)\\" m:HttpMethod=\\"POST\\">
          <Parameter Name=\\"num\\" Type=\\"Edm.Int32\\" Mode=\\"In\\" Nullable=\\"true\\"/>
          <Parameter Name=\\"text\\" Type=\\"Edm.String\\" Mode=\\"In\\" Nullable=\\"true\\"/>
        </FunctionImport>
        <FunctionImport Name=\\"unboundDecimalFunction\\" ReturnType=\\"Edm.Decimal\\" m:HttpMethod=\\"GET\\"/>
        <FunctionImport Name=\\"unboundDecimalsFunction\\" ReturnType=\\"Collection(Edm.Decimal)\\" m:HttpMethod=\\"GET\\"/>
        <FunctionImport Name=\\"unboundErrorFunction\\" ReturnType=\\"test.MainService.Result\\" m:HttpMethod=\\"GET\\"/>
        <FunctionImport Name=\\"unboundFunction\\" ReturnType=\\"test.MainService.Result\\" m:HttpMethod=\\"GET\\">
          <Parameter Name=\\"num\\" Type=\\"Edm.Int32\\" Mode=\\"In\\" Nullable=\\"true\\"/>
          <Parameter Name=\\"text\\" Type=\\"Edm.String\\" Mode=\\"In\\" Nullable=\\"true\\"/>
        </FunctionImport>
        <FunctionImport Name=\\"unboundNavigationFunction\\" EntitySet=\\"Header\\" ReturnType=\\"test.MainService.Header\\" m:HttpMethod=\\"GET\\">
          <Parameter Name=\\"num\\" Type=\\"Edm.Int32\\" Mode=\\"In\\" Nullable=\\"true\\"/>
          <Parameter Name=\\"text\\" Type=\\"Edm.String\\" Mode=\\"In\\" Nullable=\\"true\\"/>
        </FunctionImport>
        <FunctionImport Name=\\"unboundNavigationsFunction\\" EntitySet=\\"Header\\" ReturnType=\\"Collection(test.MainService.Header)\\" m:HttpMethod=\\"GET\\">
          <Parameter Name=\\"num\\" Type=\\"Edm.Int32\\" Mode=\\"In\\" Nullable=\\"true\\"/>
          <Parameter Name=\\"text\\" Type=\\"Edm.String\\" Mode=\\"In\\" Nullable=\\"true\\"/>
        </FunctionImport>
        <FunctionImport Name=\\"unboundWarningFunction\\" ReturnType=\\"test.MainService.Result\\" m:HttpMethod=\\"GET\\"/>
        <AssociationSet Name=\\"Header_FirstItem\\" Association=\\"test.MainService.Header_FirstItem\\">
          <End Role=\\"Header\\" EntitySet=\\"Header\\"/>
          <End Role=\\"HeaderItem\\" EntitySet=\\"HeaderItem\\"/>
        </AssociationSet>
        <AssociationSet Name=\\"HeaderAssocKey_header\\" Association=\\"test.MainService.HeaderAssocKey_header\\">
          <End Role=\\"HeaderAssocKey\\" EntitySet=\\"HeaderAssocKey\\"/>
          <End Role=\\"Header\\" EntitySet=\\"Header\\"/>
        </AssociationSet>
        <AssociationSet Name=\\"HeaderItem_header\\" Association=\\"test.MainService.HeaderItem_header\\">
          <End Role=\\"HeaderItem\\" EntitySet=\\"HeaderItem\\"/>
          <End Role=\\"Header\\" EntitySet=\\"Header\\"/>
        </AssociationSet>
        <AssociationSet Name=\\"HeaderItem_NextItem\\" Association=\\"test.MainService.HeaderItem_NextItem\\">
          <End Role=\\"HeaderItem\\" EntitySet=\\"HeaderItem\\"/>
          <End Role=\\"HeaderItem1\\" EntitySet=\\"HeaderItem\\"/>
        </AssociationSet>
        <AssociationSet Name=\\"HeaderItem_assoc\\" Association=\\"test.MainService.HeaderItem_assoc\\">
          <End Role=\\"HeaderItem\\" EntitySet=\\"HeaderItem\\"/>
          <End Role=\\"HeaderAssocKey\\" EntitySet=\\"HeaderAssocKey\\"/>
        </AssociationSet>
      </EntityContainer>
      <EntityType Name=\\"Favorite\\">
        <Key>
          <PropertyRef Name=\\"name\\"/>
        </Key>
        <Property Name=\\"name\\" Type=\\"Edm.String\\" Nullable=\\"false\\"/>
        <Property Name=\\"value\\" Type=\\"Edm.String\\"/>
      </EntityType>
      <EntityType Name=\\"Header\\">
        <Key>
          <PropertyRef Name=\\"ID\\"/>
        </Key>
        <Property Name=\\"ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\"/>
        <Property Name=\\"createdAt\\" Type=\\"Edm.DateTimeOffset\\" Precision=\\"7\\"/>
        <Property Name=\\"createdBy\\" Type=\\"Edm.String\\" MaxLength=\\"255\\"/>
        <Property Name=\\"modifiedAt\\" Type=\\"Edm.DateTimeOffset\\" Precision=\\"7\\"/>
        <Property Name=\\"modifiedBy\\" Type=\\"Edm.String\\" MaxLength=\\"255\\"/>
        <Property Name=\\"name\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"description\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"country\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"currency\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"stock\\" Type=\\"Edm.Int32\\"/>
        <Property Name=\\"price\\" Type=\\"Edm.Decimal\\" Scale=\\"2\\" Precision=\\"12\\"/>
        <NavigationProperty Name=\\"Items\\" Relationship=\\"test.MainService.HeaderItem_header\\" FromRole=\\"Header\\" ToRole=\\"HeaderItem\\"/>
        <NavigationProperty Name=\\"FirstItem\\" Relationship=\\"test.MainService.Header_FirstItem\\" FromRole=\\"Header\\" ToRole=\\"HeaderItem\\"/>
        <Property Name=\\"FirstItem_ID\\" Type=\\"Edm.Guid\\"/>
      </EntityType>
      <EntityType Name=\\"HeaderAssocKey\\">
        <Key>
          <PropertyRef Name=\\"header_ID\\"/>
        </Key>
        <NavigationProperty Name=\\"header\\" Relationship=\\"test.MainService.HeaderAssocKey_header\\" FromRole=\\"HeaderAssocKey\\" ToRole=\\"Header\\"/>
        <Property Name=\\"num\\" Type=\\"Edm.Double\\"/>
        <Property Name=\\"header_ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\"/>
      </EntityType>
      <EntityType Name=\\"HeaderItem\\">
        <Key>
          <PropertyRef Name=\\"ID\\"/>
        </Key>
        <Property Name=\\"ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\"/>
        <Property Name=\\"name\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"description\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"startAt\\" Type=\\"Edm.DateTimeOffset\\" Precision=\\"7\\"/>
        <Property Name=\\"endAt\\" Type=\\"Edm.DateTimeOffset\\" Precision=\\"7\\"/>
        <NavigationProperty Name=\\"header\\" Relationship=\\"test.MainService.HeaderItem_header\\" FromRole=\\"HeaderItem\\" ToRole=\\"Header\\"/>
        <NavigationProperty Name=\\"NextItem\\" Relationship=\\"test.MainService.HeaderItem_NextItem\\" FromRole=\\"HeaderItem\\" ToRole=\\"HeaderItem1\\"/>
        <NavigationProperty Name=\\"assoc\\" Relationship=\\"test.MainService.HeaderItem_assoc\\" FromRole=\\"HeaderItem\\" ToRole=\\"HeaderAssocKey\\"/>
        <Property Name=\\"header_ID\\" Type=\\"Edm.Guid\\"/>
        <Property Name=\\"NextItem_ID\\" Type=\\"Edm.Guid\\"/>
        <Property Name=\\"assoc_header_ID\\" Type=\\"Edm.Guid\\"/>
      </EntityType>
      <EntityType Name=\\"HeaderStream\\" m:HasStream=\\"true\\">
        <Key>
          <PropertyRef Name=\\"ID\\"/>
        </Key>
        <Property Name=\\"ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\"/>
        <Property Name=\\"mediaType\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"filename\\" Type=\\"Edm.String\\"/>
      </EntityType>
      <EntityType Name=\\"HeaderTemporal\\">
        <Key>
          <PropertyRef Name=\\"ID\\"/>
          <PropertyRef Name=\\"validFrom\\"/>
        </Key>
        <Property Name=\\"ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\"/>
        <Property Name=\\"validFrom\\" Type=\\"Edm.DateTimeOffset\\" Precision=\\"7\\" Nullable=\\"false\\"/>
        <Property Name=\\"validTo\\" Type=\\"Edm.DateTimeOffset\\" Precision=\\"7\\"/>
        <Property Name=\\"name\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"value\\" Type=\\"Edm.String\\"/>
      </EntityType>
      <EntityType Name=\\"HeaderUrlStream\\" m:HasStream=\\"true\\">
        <Key>
          <PropertyRef Name=\\"ID\\"/>
        </Key>
        <Property Name=\\"ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\"/>
        <Property Name=\\"mediaType\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"filename\\" Type=\\"Edm.String\\"/>
      </EntityType>
      <EntityType Name=\\"StringUUID\\">
        <Key>
          <PropertyRef Name=\\"ID\\"/>
        </Key>
        <Property Name=\\"ID\\" Type=\\"Edm.String\\" Nullable=\\"false\\"/>
        <Property Name=\\"name\\" Type=\\"Edm.String\\"/>
      </EntityType>
      <ComplexType Name=\\"Result\\">
        <Property Name=\\"name\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"code\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"age\\" Type=\\"Edm.Int32\\"/>
      </ComplexType>
      <Association Name=\\"Header_FirstItem\\">
        <End Role=\\"Header\\" Type=\\"test.MainService.Header\\" Multiplicity=\\"*\\"/>
        <End Role=\\"HeaderItem\\" Type=\\"test.MainService.HeaderItem\\" Multiplicity=\\"0..1\\"/>
        <ReferentialConstraint>
          <Principal Role=\\"HeaderItem\\">
            <PropertyRef Name=\\"ID\\"/>
          </Principal>
          <Dependent Role=\\"Header\\">
            <PropertyRef Name=\\"FirstItem_ID\\"/>
          </Dependent>
        </ReferentialConstraint>
      </Association>
      <Association Name=\\"HeaderAssocKey_header\\">
        <End Role=\\"HeaderAssocKey\\" Type=\\"test.MainService.HeaderAssocKey\\" Multiplicity=\\"*\\"/>
        <End Role=\\"Header\\" Type=\\"test.MainService.Header\\" Multiplicity=\\"0..1\\"/>
        <ReferentialConstraint>
          <Principal Role=\\"Header\\">
            <PropertyRef Name=\\"ID\\"/>
          </Principal>
          <Dependent Role=\\"HeaderAssocKey\\">
            <PropertyRef Name=\\"header_ID\\"/>
          </Dependent>
        </ReferentialConstraint>
      </Association>
      <Association Name=\\"HeaderItem_header\\">
        <End Role=\\"HeaderItem\\" Type=\\"test.MainService.HeaderItem\\" Multiplicity=\\"*\\">
          <OnDelete Action=\\"Cascade\\"/>
        </End>
        <End Role=\\"Header\\" Type=\\"test.MainService.Header\\" Multiplicity=\\"0..1\\"/>
        <ReferentialConstraint>
          <Principal Role=\\"Header\\">
            <PropertyRef Name=\\"ID\\"/>
          </Principal>
          <Dependent Role=\\"HeaderItem\\">
            <PropertyRef Name=\\"header_ID\\"/>
          </Dependent>
        </ReferentialConstraint>
      </Association>
      <Association Name=\\"HeaderItem_NextItem\\">
        <End Role=\\"HeaderItem\\" Type=\\"test.MainService.HeaderItem\\" Multiplicity=\\"*\\"/>
        <End Role=\\"HeaderItem1\\" Type=\\"test.MainService.HeaderItem\\" Multiplicity=\\"0..1\\"/>
        <ReferentialConstraint>
          <Principal Role=\\"HeaderItem1\\">
            <PropertyRef Name=\\"ID\\"/>
          </Principal>
          <Dependent Role=\\"HeaderItem\\">
            <PropertyRef Name=\\"NextItem_ID\\"/>
          </Dependent>
        </ReferentialConstraint>
      </Association>
      <Association Name=\\"HeaderItem_assoc\\">
        <End Role=\\"HeaderItem\\" Type=\\"test.MainService.HeaderItem\\" Multiplicity=\\"*\\"/>
        <End Role=\\"HeaderAssocKey\\" Type=\\"test.MainService.HeaderAssocKey\\" Multiplicity=\\"0..1\\"/>
        <ReferentialConstraint>
          <Principal Role=\\"HeaderAssocKey\\">
            <PropertyRef Name=\\"header_ID\\"/>
          </Principal>
          <Dependent Role=\\"HeaderItem\\">
            <PropertyRef Name=\\"assoc_header_ID\\"/>
          </Dependent>
        </ReferentialConstraint>
      </Association>
      <Annotations Target=\\"test.MainService.Header/createdAt\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Angelegt am\\"/>
        <Annotation Term=\\"Core.Computed\\" Bool=\\"true\\"/>
        <Annotation Term=\\"Core.Immutable\\" Bool=\\"true\\"/>
        <Annotation Term=\\"UI.HiddenFilter\\" Bool=\\"true\\"/>
      </Annotations>
      <Annotations Target=\\"test.MainService.Header/createdBy\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Angelegt von\\"/>
        <Annotation Term=\\"Core.Computed\\" Bool=\\"true\\"/>
        <Annotation Term=\\"Core.Description\\" String=\\"Die eindeutige ID eines Benutzers\\"/>
        <Annotation Term=\\"Core.Immutable\\" Bool=\\"true\\"/>
        <Annotation Term=\\"UI.HiddenFilter\\" Bool=\\"true\\"/>
      </Annotations>
      <Annotations Target=\\"test.MainService.Header/modifiedAt\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Geändert am\\"/>
        <Annotation Term=\\"Core.Computed\\" Bool=\\"true\\"/>
        <Annotation Term=\\"UI.HiddenFilter\\" Bool=\\"true\\"/>
      </Annotations>
      <Annotations Target=\\"test.MainService.Header/modifiedBy\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Geändert von\\"/>
        <Annotation Term=\\"Core.Computed\\" Bool=\\"true\\"/>
        <Annotation Term=\\"Core.Description\\" String=\\"Die eindeutige ID eines Benutzers\\"/>
        <Annotation Term=\\"UI.HiddenFilter\\" Bool=\\"true\\"/>
      </Annotations>
      <Annotations Target=\\"test.MainService.HeaderStream/mediaType\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Core.IsMediaType\\" Bool=\\"true\\"/>
      </Annotations>
      <Annotations Target=\\"test.MainService.HeaderUrlStream/mediaType\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Core.IsMediaType\\" Bool=\\"true\\"/>
      </Annotations>
      <Annotations Target=\\"test.MainService.HeaderUrlStream/filename\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.ContentDisposition\\">
          <Record>
            <PropertyValue Property=\\"Filename\\" Bool=\\"true\\"/>
          </Record>
        </Annotation>
      </Annotations>
    </Schema>
  </edmx:DataServices>
</edmx:Edmx>"
`;

exports[`main-request GET $metadata localized 2`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<edmx:Edmx Version=\\"1.0\\" xmlns:edmx=\\"http://schemas.microsoft.com/ado/2007/06/edmx\\" xmlns:m=\\"http://schemas.microsoft.com/ado/2007/08/dataservices/metadata\\" xmlns:sap=\\"http://www.sap.com/Protocols/SAPData\\">
  <edmx:Reference Uri=\\"https://sap.github.io/odata-vocabularies/vocabularies/Common.xml\\" xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\">
    <edmx:Include Alias=\\"Common\\" Namespace=\\"com.sap.vocabularies.Common.v1\\"/>
  </edmx:Reference>
  <edmx:Reference Uri=\\"https://oasis-tcs.github.io/odata-vocabularies/vocabularies/Org.OData.Core.V1.xml\\" xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\">
    <edmx:Include Alias=\\"Core\\" Namespace=\\"Org.OData.Core.V1\\"/>
  </edmx:Reference>
  <edmx:Reference Uri=\\"https://sap.github.io/odata-vocabularies/vocabularies/UI.xml\\" xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\">
    <edmx:Include Alias=\\"UI\\" Namespace=\\"com.sap.vocabularies.UI.v1\\"/>
  </edmx:Reference>
  <edmx:DataServices m:DataServiceVersion=\\"2.0\\">
    <Schema Namespace=\\"test.MainService\\" xmlns=\\"http://schemas.microsoft.com/ado/2008/09/edm\\">
      <EntityContainer Name=\\"EntityContainer\\" m:IsDefaultEntityContainer=\\"true\\">
        <EntitySet Name=\\"Favorite\\" EntityType=\\"test.MainService.Favorite\\"/>
        <EntitySet Name=\\"Header\\" EntityType=\\"test.MainService.Header\\"/>
        <FunctionImport Name=\\"Header_boundAction\\" ReturnType=\\"test.MainService.Result\\" m:HttpMethod=\\"POST\\" sap:action-for=\\"test.MainService.Header\\">
          <Parameter Name=\\"ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\" Mode=\\"In\\"/>
          <Parameter Name=\\"num\\" Type=\\"Edm.Int32\\" Mode=\\"In\\" Nullable=\\"true\\"/>
          <Parameter Name=\\"text\\" Type=\\"Edm.String\\" Mode=\\"In\\" Nullable=\\"true\\"/>
        </FunctionImport>
        <FunctionImport Name=\\"Header_boundFunction\\" ReturnType=\\"Collection(test.MainService.Result)\\" m:HttpMethod=\\"GET\\" sap:action-for=\\"test.MainService.Header\\">
          <Parameter Name=\\"ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\" Mode=\\"In\\"/>
          <Parameter Name=\\"num\\" Type=\\"Edm.Int32\\" Mode=\\"In\\" Nullable=\\"true\\"/>
          <Parameter Name=\\"text\\" Type=\\"Edm.String\\" Mode=\\"In\\" Nullable=\\"true\\"/>
        </FunctionImport>
        <EntitySet Name=\\"HeaderAssocKey\\" EntityType=\\"test.MainService.HeaderAssocKey\\"/>
        <EntitySet Name=\\"HeaderItem\\" EntityType=\\"test.MainService.HeaderItem\\"/>
        <EntitySet Name=\\"HeaderStream\\" EntityType=\\"test.MainService.HeaderStream\\"/>
        <EntitySet Name=\\"HeaderTemporal\\" EntityType=\\"test.MainService.HeaderTemporal\\"/>
        <EntitySet Name=\\"HeaderUrlStream\\" EntityType=\\"test.MainService.HeaderUrlStream\\"/>
        <EntitySet Name=\\"StringUUID\\" EntityType=\\"test.MainService.StringUUID\\"/>
        <FunctionImport Name=\\"unboundAction\\" ReturnType=\\"Collection(test.MainService.Result)\\" m:HttpMethod=\\"POST\\">
          <Parameter Name=\\"num\\" Type=\\"Edm.Int32\\" Mode=\\"In\\" Nullable=\\"true\\"/>
          <Parameter Name=\\"text\\" Type=\\"Edm.String\\" Mode=\\"In\\" Nullable=\\"true\\"/>
        </FunctionImport>
        <FunctionImport Name=\\"unboundDecimalFunction\\" ReturnType=\\"Edm.Decimal\\" m:HttpMethod=\\"GET\\"/>
        <FunctionImport Name=\\"unboundDecimalsFunction\\" ReturnType=\\"Collection(Edm.Decimal)\\" m:HttpMethod=\\"GET\\"/>
        <FunctionImport Name=\\"unboundErrorFunction\\" ReturnType=\\"test.MainService.Result\\" m:HttpMethod=\\"GET\\"/>
        <FunctionImport Name=\\"unboundFunction\\" ReturnType=\\"test.MainService.Result\\" m:HttpMethod=\\"GET\\">
          <Parameter Name=\\"num\\" Type=\\"Edm.Int32\\" Mode=\\"In\\" Nullable=\\"true\\"/>
          <Parameter Name=\\"text\\" Type=\\"Edm.String\\" Mode=\\"In\\" Nullable=\\"true\\"/>
        </FunctionImport>
        <FunctionImport Name=\\"unboundNavigationFunction\\" EntitySet=\\"Header\\" ReturnType=\\"test.MainService.Header\\" m:HttpMethod=\\"GET\\">
          <Parameter Name=\\"num\\" Type=\\"Edm.Int32\\" Mode=\\"In\\" Nullable=\\"true\\"/>
          <Parameter Name=\\"text\\" Type=\\"Edm.String\\" Mode=\\"In\\" Nullable=\\"true\\"/>
        </FunctionImport>
        <FunctionImport Name=\\"unboundNavigationsFunction\\" EntitySet=\\"Header\\" ReturnType=\\"Collection(test.MainService.Header)\\" m:HttpMethod=\\"GET\\">
          <Parameter Name=\\"num\\" Type=\\"Edm.Int32\\" Mode=\\"In\\" Nullable=\\"true\\"/>
          <Parameter Name=\\"text\\" Type=\\"Edm.String\\" Mode=\\"In\\" Nullable=\\"true\\"/>
        </FunctionImport>
        <FunctionImport Name=\\"unboundWarningFunction\\" ReturnType=\\"test.MainService.Result\\" m:HttpMethod=\\"GET\\"/>
        <AssociationSet Name=\\"Header_FirstItem\\" Association=\\"test.MainService.Header_FirstItem\\">
          <End Role=\\"Header\\" EntitySet=\\"Header\\"/>
          <End Role=\\"HeaderItem\\" EntitySet=\\"HeaderItem\\"/>
        </AssociationSet>
        <AssociationSet Name=\\"HeaderAssocKey_header\\" Association=\\"test.MainService.HeaderAssocKey_header\\">
          <End Role=\\"HeaderAssocKey\\" EntitySet=\\"HeaderAssocKey\\"/>
          <End Role=\\"Header\\" EntitySet=\\"Header\\"/>
        </AssociationSet>
        <AssociationSet Name=\\"HeaderItem_header\\" Association=\\"test.MainService.HeaderItem_header\\">
          <End Role=\\"HeaderItem\\" EntitySet=\\"HeaderItem\\"/>
          <End Role=\\"Header\\" EntitySet=\\"Header\\"/>
        </AssociationSet>
        <AssociationSet Name=\\"HeaderItem_NextItem\\" Association=\\"test.MainService.HeaderItem_NextItem\\">
          <End Role=\\"HeaderItem\\" EntitySet=\\"HeaderItem\\"/>
          <End Role=\\"HeaderItem1\\" EntitySet=\\"HeaderItem\\"/>
        </AssociationSet>
        <AssociationSet Name=\\"HeaderItem_assoc\\" Association=\\"test.MainService.HeaderItem_assoc\\">
          <End Role=\\"HeaderItem\\" EntitySet=\\"HeaderItem\\"/>
          <End Role=\\"HeaderAssocKey\\" EntitySet=\\"HeaderAssocKey\\"/>
        </AssociationSet>
      </EntityContainer>
      <EntityType Name=\\"Favorite\\">
        <Key>
          <PropertyRef Name=\\"name\\"/>
        </Key>
        <Property Name=\\"name\\" Type=\\"Edm.String\\" Nullable=\\"false\\"/>
        <Property Name=\\"value\\" Type=\\"Edm.String\\"/>
      </EntityType>
      <EntityType Name=\\"Header\\">
        <Key>
          <PropertyRef Name=\\"ID\\"/>
        </Key>
        <Property Name=\\"ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\"/>
        <Property Name=\\"createdAt\\" Type=\\"Edm.DateTimeOffset\\" Precision=\\"7\\"/>
        <Property Name=\\"createdBy\\" Type=\\"Edm.String\\" MaxLength=\\"255\\"/>
        <Property Name=\\"modifiedAt\\" Type=\\"Edm.DateTimeOffset\\" Precision=\\"7\\"/>
        <Property Name=\\"modifiedBy\\" Type=\\"Edm.String\\" MaxLength=\\"255\\"/>
        <Property Name=\\"name\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"description\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"country\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"currency\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"stock\\" Type=\\"Edm.Int32\\"/>
        <Property Name=\\"price\\" Type=\\"Edm.Decimal\\" Scale=\\"2\\" Precision=\\"12\\"/>
        <NavigationProperty Name=\\"Items\\" Relationship=\\"test.MainService.HeaderItem_header\\" FromRole=\\"Header\\" ToRole=\\"HeaderItem\\"/>
        <NavigationProperty Name=\\"FirstItem\\" Relationship=\\"test.MainService.Header_FirstItem\\" FromRole=\\"Header\\" ToRole=\\"HeaderItem\\"/>
        <Property Name=\\"FirstItem_ID\\" Type=\\"Edm.Guid\\"/>
      </EntityType>
      <EntityType Name=\\"HeaderAssocKey\\">
        <Key>
          <PropertyRef Name=\\"header_ID\\"/>
        </Key>
        <NavigationProperty Name=\\"header\\" Relationship=\\"test.MainService.HeaderAssocKey_header\\" FromRole=\\"HeaderAssocKey\\" ToRole=\\"Header\\"/>
        <Property Name=\\"num\\" Type=\\"Edm.Double\\"/>
        <Property Name=\\"header_ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\"/>
      </EntityType>
      <EntityType Name=\\"HeaderItem\\">
        <Key>
          <PropertyRef Name=\\"ID\\"/>
        </Key>
        <Property Name=\\"ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\"/>
        <Property Name=\\"name\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"description\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"startAt\\" Type=\\"Edm.DateTimeOffset\\" Precision=\\"7\\"/>
        <Property Name=\\"endAt\\" Type=\\"Edm.DateTimeOffset\\" Precision=\\"7\\"/>
        <NavigationProperty Name=\\"header\\" Relationship=\\"test.MainService.HeaderItem_header\\" FromRole=\\"HeaderItem\\" ToRole=\\"Header\\"/>
        <NavigationProperty Name=\\"NextItem\\" Relationship=\\"test.MainService.HeaderItem_NextItem\\" FromRole=\\"HeaderItem\\" ToRole=\\"HeaderItem1\\"/>
        <NavigationProperty Name=\\"assoc\\" Relationship=\\"test.MainService.HeaderItem_assoc\\" FromRole=\\"HeaderItem\\" ToRole=\\"HeaderAssocKey\\"/>
        <Property Name=\\"header_ID\\" Type=\\"Edm.Guid\\"/>
        <Property Name=\\"NextItem_ID\\" Type=\\"Edm.Guid\\"/>
        <Property Name=\\"assoc_header_ID\\" Type=\\"Edm.Guid\\"/>
      </EntityType>
      <EntityType Name=\\"HeaderStream\\" m:HasStream=\\"true\\">
        <Key>
          <PropertyRef Name=\\"ID\\"/>
        </Key>
        <Property Name=\\"ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\"/>
        <Property Name=\\"mediaType\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"filename\\" Type=\\"Edm.String\\"/>
      </EntityType>
      <EntityType Name=\\"HeaderTemporal\\">
        <Key>
          <PropertyRef Name=\\"ID\\"/>
          <PropertyRef Name=\\"validFrom\\"/>
        </Key>
        <Property Name=\\"ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\"/>
        <Property Name=\\"validFrom\\" Type=\\"Edm.DateTimeOffset\\" Precision=\\"7\\" Nullable=\\"false\\"/>
        <Property Name=\\"validTo\\" Type=\\"Edm.DateTimeOffset\\" Precision=\\"7\\"/>
        <Property Name=\\"name\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"value\\" Type=\\"Edm.String\\"/>
      </EntityType>
      <EntityType Name=\\"HeaderUrlStream\\" m:HasStream=\\"true\\">
        <Key>
          <PropertyRef Name=\\"ID\\"/>
        </Key>
        <Property Name=\\"ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\"/>
        <Property Name=\\"mediaType\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"filename\\" Type=\\"Edm.String\\"/>
      </EntityType>
      <EntityType Name=\\"StringUUID\\">
        <Key>
          <PropertyRef Name=\\"ID\\"/>
        </Key>
        <Property Name=\\"ID\\" Type=\\"Edm.String\\" Nullable=\\"false\\"/>
        <Property Name=\\"name\\" Type=\\"Edm.String\\"/>
      </EntityType>
      <ComplexType Name=\\"Result\\">
        <Property Name=\\"name\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"code\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"age\\" Type=\\"Edm.Int32\\"/>
      </ComplexType>
      <Association Name=\\"Header_FirstItem\\">
        <End Role=\\"Header\\" Type=\\"test.MainService.Header\\" Multiplicity=\\"*\\"/>
        <End Role=\\"HeaderItem\\" Type=\\"test.MainService.HeaderItem\\" Multiplicity=\\"0..1\\"/>
        <ReferentialConstraint>
          <Principal Role=\\"HeaderItem\\">
            <PropertyRef Name=\\"ID\\"/>
          </Principal>
          <Dependent Role=\\"Header\\">
            <PropertyRef Name=\\"FirstItem_ID\\"/>
          </Dependent>
        </ReferentialConstraint>
      </Association>
      <Association Name=\\"HeaderAssocKey_header\\">
        <End Role=\\"HeaderAssocKey\\" Type=\\"test.MainService.HeaderAssocKey\\" Multiplicity=\\"*\\"/>
        <End Role=\\"Header\\" Type=\\"test.MainService.Header\\" Multiplicity=\\"0..1\\"/>
        <ReferentialConstraint>
          <Principal Role=\\"Header\\">
            <PropertyRef Name=\\"ID\\"/>
          </Principal>
          <Dependent Role=\\"HeaderAssocKey\\">
            <PropertyRef Name=\\"header_ID\\"/>
          </Dependent>
        </ReferentialConstraint>
      </Association>
      <Association Name=\\"HeaderItem_header\\">
        <End Role=\\"HeaderItem\\" Type=\\"test.MainService.HeaderItem\\" Multiplicity=\\"*\\">
          <OnDelete Action=\\"Cascade\\"/>
        </End>
        <End Role=\\"Header\\" Type=\\"test.MainService.Header\\" Multiplicity=\\"0..1\\"/>
        <ReferentialConstraint>
          <Principal Role=\\"Header\\">
            <PropertyRef Name=\\"ID\\"/>
          </Principal>
          <Dependent Role=\\"HeaderItem\\">
            <PropertyRef Name=\\"header_ID\\"/>
          </Dependent>
        </ReferentialConstraint>
      </Association>
      <Association Name=\\"HeaderItem_NextItem\\">
        <End Role=\\"HeaderItem\\" Type=\\"test.MainService.HeaderItem\\" Multiplicity=\\"*\\"/>
        <End Role=\\"HeaderItem1\\" Type=\\"test.MainService.HeaderItem\\" Multiplicity=\\"0..1\\"/>
        <ReferentialConstraint>
          <Principal Role=\\"HeaderItem1\\">
            <PropertyRef Name=\\"ID\\"/>
          </Principal>
          <Dependent Role=\\"HeaderItem\\">
            <PropertyRef Name=\\"NextItem_ID\\"/>
          </Dependent>
        </ReferentialConstraint>
      </Association>
      <Association Name=\\"HeaderItem_assoc\\">
        <End Role=\\"HeaderItem\\" Type=\\"test.MainService.HeaderItem\\" Multiplicity=\\"*\\"/>
        <End Role=\\"HeaderAssocKey\\" Type=\\"test.MainService.HeaderAssocKey\\" Multiplicity=\\"0..1\\"/>
        <ReferentialConstraint>
          <Principal Role=\\"HeaderAssocKey\\">
            <PropertyRef Name=\\"header_ID\\"/>
          </Principal>
          <Dependent Role=\\"HeaderItem\\">
            <PropertyRef Name=\\"assoc_header_ID\\"/>
          </Dependent>
        </ReferentialConstraint>
      </Association>
      <Annotations Target=\\"test.MainService.Header/createdAt\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Angelegt am\\"/>
        <Annotation Term=\\"Core.Computed\\" Bool=\\"true\\"/>
        <Annotation Term=\\"Core.Immutable\\" Bool=\\"true\\"/>
        <Annotation Term=\\"UI.HiddenFilter\\" Bool=\\"true\\"/>
      </Annotations>
      <Annotations Target=\\"test.MainService.Header/createdBy\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Angelegt von\\"/>
        <Annotation Term=\\"Core.Computed\\" Bool=\\"true\\"/>
        <Annotation Term=\\"Core.Description\\" String=\\"Die eindeutige ID eines Benutzers\\"/>
        <Annotation Term=\\"Core.Immutable\\" Bool=\\"true\\"/>
        <Annotation Term=\\"UI.HiddenFilter\\" Bool=\\"true\\"/>
      </Annotations>
      <Annotations Target=\\"test.MainService.Header/modifiedAt\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Geändert am\\"/>
        <Annotation Term=\\"Core.Computed\\" Bool=\\"true\\"/>
        <Annotation Term=\\"UI.HiddenFilter\\" Bool=\\"true\\"/>
      </Annotations>
      <Annotations Target=\\"test.MainService.Header/modifiedBy\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Geändert von\\"/>
        <Annotation Term=\\"Core.Computed\\" Bool=\\"true\\"/>
        <Annotation Term=\\"Core.Description\\" String=\\"Die eindeutige ID eines Benutzers\\"/>
        <Annotation Term=\\"UI.HiddenFilter\\" Bool=\\"true\\"/>
      </Annotations>
      <Annotations Target=\\"test.MainService.HeaderStream/mediaType\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Core.IsMediaType\\" Bool=\\"true\\"/>
      </Annotations>
      <Annotations Target=\\"test.MainService.HeaderUrlStream/mediaType\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Core.IsMediaType\\" Bool=\\"true\\"/>
      </Annotations>
      <Annotations Target=\\"test.MainService.HeaderUrlStream/filename\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.ContentDisposition\\">
          <Record>
            <PropertyValue Property=\\"Filename\\" Bool=\\"true\\"/>
          </Record>
        </Annotation>
      </Annotations>
    </Schema>
  </edmx:DataServices>
</edmx:Edmx>"
`;

exports[`main-request GET service XML format 1`] = `"<?xml version=\\"1.0\\" encoding=\\"utf-8\\" standalone=\\"yes\\" ?><service xml:base=\\"v2/main\\" xmlns:atom=\\"http://www.w3.org/2005/Atom\\" xmlns:app=\\"http://www.w3.org/2007/app\\" xmlns=\\"http://www.w3.org/2007/app\\"><workspace><atom:title>Default</atom:title><collection href=\\"Favorite\\"><atom:title>Favorite</atom:title></collection><collection href=\\"Header\\"><atom:title>Header</atom:title></collection><collection href=\\"HeaderAssocKey\\"><atom:title>HeaderAssocKey</atom:title></collection><collection href=\\"HeaderItem\\"><atom:title>HeaderItem</atom:title></collection><collection href=\\"HeaderStream\\"><atom:title>HeaderStream</atom:title></collection><collection href=\\"HeaderTemporal\\"><atom:title>HeaderTemporal</atom:title></collection><collection href=\\"HeaderUrlStream\\"><atom:title>HeaderUrlStream</atom:title></collection><collection href=\\"StringUUID\\"><atom:title>StringUUID</atom:title></collection></workspace></service>"`;

exports[`main-request GET service XML format 2`] = `"<?xml version=\\"1.0\\" encoding=\\"utf-8\\" standalone=\\"yes\\" ?><service xml:base=\\"v2/main\\" xmlns:atom=\\"http://www.w3.org/2005/Atom\\" xmlns:app=\\"http://www.w3.org/2007/app\\" xmlns=\\"http://www.w3.org/2007/app\\"><workspace><atom:title>Default</atom:title><collection href=\\"Favorite\\"><atom:title>Favorite</atom:title></collection><collection href=\\"Header\\"><atom:title>Header</atom:title></collection><collection href=\\"HeaderAssocKey\\"><atom:title>HeaderAssocKey</atom:title></collection><collection href=\\"HeaderItem\\"><atom:title>HeaderItem</atom:title></collection><collection href=\\"HeaderStream\\"><atom:title>HeaderStream</atom:title></collection><collection href=\\"HeaderTemporal\\"><atom:title>HeaderTemporal</atom:title></collection><collection href=\\"HeaderUrlStream\\"><atom:title>HeaderUrlStream</atom:title></collection><collection href=\\"StringUUID\\"><atom:title>StringUUID</atom:title></collection></workspace></service>"`;

exports[`main-request GET service XML format 3`] = `"<?xml version=\\"1.0\\" encoding=\\"utf-8\\" standalone=\\"yes\\" ?><service xml:base=\\"v2/main\\" xmlns:atom=\\"http://www.w3.org/2005/Atom\\" xmlns:app=\\"http://www.w3.org/2007/app\\" xmlns=\\"http://www.w3.org/2007/app\\"><workspace><atom:title>Default</atom:title><collection href=\\"Favorite\\"><atom:title>Favorite</atom:title></collection><collection href=\\"Header\\"><atom:title>Header</atom:title></collection><collection href=\\"HeaderAssocKey\\"><atom:title>HeaderAssocKey</atom:title></collection><collection href=\\"HeaderItem\\"><atom:title>HeaderItem</atom:title></collection><collection href=\\"HeaderStream\\"><atom:title>HeaderStream</atom:title></collection><collection href=\\"HeaderTemporal\\"><atom:title>HeaderTemporal</atom:title></collection><collection href=\\"HeaderUrlStream\\"><atom:title>HeaderUrlStream</atom:title></collection><collection href=\\"StringUUID\\"><atom:title>StringUUID</atom:title></collection></workspace></service>"`;
